Feature/bytte endepukter til kodeverk service (#3454)
Oppdatere klienter til bruk av kodeverk-service